-added cybex chunk item -added loot table for cybex ore
Signed-off-by: Silicon <axolium.prime@gmail.com>

--- a/src/main/resources/assets/sector52/lang/en_us.json
+++ b/src/main/resources/assets/sector52/lang/en_us.json
@@ -1,5 +1,6 @@
 {
   "itemGroup.sector_52_tab_1": "Sector52",
   "block.sector52.cybex_ore": "Cybex Ore",
-  "block.sector52.titanium_ore": "Titanium Ore"
+  "block.sector52.titanium_ore": "Titanium Ore",
+  "item.sector52.cybex_chunk": "Cybex Chunk"
 }
