--- a/src/main/resources/assets/sector52/lang/en_us.json
+++ b/src/main/resources/assets/sector52/lang/en_us.json
@@ -1,5 +1,5 @@
 {
-  "itemGroup.sector_52_tab_1": "Sector52",
+  "itemGroup.sector_52_tab_1": "Sector52 General",
   "block.sector52.cybex_ore": "Cybex Ore",
   "block.sector52.titanium_ore": "Titanium Ore",
   "item.sector52.cybex_chunk": "Cybex Chunk"
