-added Varda Tree Blocks - (Log, Big Leaves, Small Leaves) -Organized files and Json code alphabetically -Refactored Block Structure -Remade Varda Tree Block Textures - (They would not render correctly)
Signed-off-by: Silicon <axolium.prime@gmail.com>

--- a/src/main/resources/assets/sector52/lang/en_us.json
+++ b/src/main/resources/assets/sector52/lang/en_us.json
@@ -1,6 +1,9 @@
 {
-  "itemGroup.sector_52_tab_1": "Sector52 General",
   "block.sector52.cybex_ore": "Cybex Ore",
   "block.sector52.titanium_ore": "Titanium Ore",
-  "item.sector52.cybex_chunk": "Cybex Chunk"
+  "block.sector52.varda_big_leaves": "Varda Big Leaves",
+  "block.sector52.varda_log": "Varda Log",
+  "block.sector52.varda_small_leaves": "Varda Small Leaves",
+  "item.sector52.cybex_chunk": "Cybex Chunk",
+  "itemGroup.sector_52_tab_1": "Sector52 General"
 }
